# geomag

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  runner.py  setup.py  transforms.py  wsgi.py
api/: model.py  transforms.py  utils.py
api/tests/: test_model.py
app/: main.py
geomag/: __init__.py  constants.py  model.py  transforms.py  utils.py
isogonic_api.egg-info/: PKG-INFO  SOURCES.txt
