[tool.poetry]
name = "wwm"
version = "0.1.0"
description = ""
authors = ["Sam <sam.thompson@biarri.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
pytest = "^5.4.1"
numpy = "^1.18.3"
pyproj = "^2.6.1"
pandas = "^1.0.5"
ipdb = "^0.13.3"
flask = "^1.1.2"
flask_restful = "^0.3.8"
webargs = "^6.1.0"
gunicorn = "^20.0.4"
flask_cors = "^3.0.8"
matplotlib = "^3.2.2"
geojsoncontour = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
