[tool.poetry]
name = "geomag"
version = "0.2.0"
description = ""
authors = ["Sam Thompson <chompar4@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
flask = "^1.1.2"
flask_restful = "^0.3.8"
webargs = "^6.1.0"
gunicorn = "^20.0.4"
flask_cors = "^3.0.8"
geojsoncontour = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
