[tool.poetry]
name = "geomag"
version = "0.6.0"
description = ""
authors = ["Sam Thompson <chompar4@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
flask = "^2.2.5"
flask_restful = "^0.3.8"
webargs = "^6.1.0"
gunicorn = "^20.0.4"
flask_cors = "^3.0.8"
geojsoncontour = "^0.4.0"
setuptools = "^50.3.0"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.6.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
